Add mushroom forecast data and observations
